--- a/views/index.html
+++ b/views/index.html
@@ -76,15 +76,24 @@
     <!-- map section -->
     <section class="map-section">
       <div class="find-hero-button">
-        <button type="button" class="btn btn-primary" id="map-button">Find Hero</button>
+        <button type="button" class="btn btn-primary" id="map-button">Find A Hero</button>
       </div>
       <article class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3" id="hero-map">
             <div id="mapPlacement"></div>
-            <div class="current-location">
-              <button type="button" class="btn btn-primary btn-block" id="current-location">Use My Current Location</button>
-            </div>
+            <section class="container-fluid">
+              <div class="row">
+                <div class="current-location col-lg-6 col-xs-12">
+                  <button type="button" class="btn btn-primary btn-lg" id="current-location">Closest Food To My Face!</button>
+                </div>
+<!-- doesn't work -->
+                <div class="change-location col-lg-6 col-xs-12">
+                  <button type="button" class="btn btn-primary btn-lg" id="change-location">Feed My Food Hole Here!</button>
+                </div>
+<!-- above doesn't work -->
+              </div>
+            </section>
             <div class="hide-map-area">
               <button type="button" class="btn btn-primary" id="hide-map-button">Hide Map</button>
             </div>
@@ -93,6 +102,7 @@
       </article>
     </section>
 
+    <!-- Create review -->
     <section class="container">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
