--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -46,8 +46,9 @@
   }
 
   .jumbotron {
-    background-color: #0B543E;
-    color: #E5563C;
+    /*background-color: #0B543E;*/
+    background-color: #A4D0C9;
+    color: #FBD900;
   }
 
   .site-logo {
@@ -64,8 +65,10 @@
   }
 
   .reviewIndividual {
-    border: solid 1px black;
-    background-color: #BBDB93;
+    border: solid 2px black;
+    background-color: #E69136;
+    margin-bottom: 15px;
+    border-radius: 0px 70px 0px 0px;
   }
 
   .review-gif {
@@ -84,8 +87,13 @@
     text-align: center;
   }
 
+  .whole-page {
+    /*background-color: #0B543E;*/
+    /*background: linear-gradient(20deg, #74C5FF, #FBD601 20%, #74C5FF);*/
+    background: linear-gradient(180deg, #97CFE6, #FBD601);
+  }
+
   body {
-    /*font-family: Calibria, serif;*/
     background-color: #0B543E;
   }
 
